Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_core_75905.html'>Unified diff core:dev vs beta:origin/core_75905</a></li>
 
+                        <li><a href='diff_core_test.html'>Unified diff core:dev vs beta:origin/core_test</a></li>
+
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
