Update: main - Diff report completed

--- a/diff_core_test.html
+++ b/diff_core_test.html
@@ -6068,7 +6068,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        for _, temperature in data.items():</span>
+            <span class="d2h-code-line-ctn">        for temperature in list(data.values()):</span>
         </div>
     </td>
 </tr><tr>
@@ -6090,7 +6090,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                self._attr_min_temp &lt;= temperature &lt;= self._attr_max_temp</span>
+            <span class="d2h-code-line-ctn">                self._attr_min_temp &lt; temperature &lt; self._attr_max_temp</span>
         </div>
     </td>
 </tr><tr>
@@ -15812,7 +15812,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>31</del>.<del>0a0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>31</del>.<del>0a1</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
